Fix text alignment under box - Add spacing between box items for better layout - Update css for second section layout

--- a/style.css
+++ b/style.css
@@ -86,13 +86,16 @@ h1 {
     text-align: center;
     font-size: 36px;
     font-weight: 800;
+    padding: 20px 0;
+    margin-bottom: 40px;
+
 }
 
 
 .box {
     width: 150px;
     height: 150px;
-    border: 3px solid rgb(47, 76, 236);
+    border: 3px solid rgb(70, 97, 255);
     border-radius: 8px;
 
 }
@@ -100,12 +103,19 @@ h1 {
 .box-item {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+}
+
+.box-item p {
+    width: 150px;
+    text-align: center;
+    color: rgba(62, 63, 65, 0.952);
 }
 
 .box-container {
     display: flex;
-    justify-content: space-between;
-
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
 }
